tests/cli_renderer_unicode/cli_renderer_unicode.exp
Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ basic.js:6:1

Cannot cast `null` to empty because null [1] is incompatible with empty [2]. [incompatible-type]

   basic.js:6:1
   6│ null as empty; // Error: null ~> empty
      ^^^^ [1]

References:
   basic.js:6:9
   6│ null as empty; // Error: null ~> empty
              ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame.js:2:6

Cannot cast object literal to object type because in property `p`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame.js:2:6
   2│ ({p: 42} as {p: empty});
           ^^ [1]

References:
   code_frame.js:2:17
   2│ ({p: 42} as {p: empty});
                      ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame.js:4:6

Cannot cast object literal to object type because in property `p`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame.js:4:6
   4│ ({p: 42} as {p: empty});
           ^^ [1]

References:
   code_frame.js:4:17
   4│ ({p: 42} as {p: empty});
                      ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame.js:7:6

Cannot cast object literal to object type because in property `p`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame.js:7:6
   7│   p: 42,
           ^^ [1]

References:
   code_frame.js:9:6
   9│   p: empty,
           ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame.js:12:6

Cannot cast object literal to object type because in property `p`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame.js:12:6
   12│ ({p: 42} as {p: empty});
            ^^ [1]

References:
   code_frame.js:12:17
   12│ ({p: 42} as {p: empty});
                       ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:10:4

Cannot cast array literal to tuple type because in index `0`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:10:4
   10│   [x, y] as [empty, empty];
          ^

References:
   code_frame_omit.js:7:13
    7│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:10:14
   10│   [x, y] as [empty, empty];
                    ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:10:7

Cannot cast array literal to tuple type because in index `1`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:10:7
   10│   [x, y] as [empty, empty];
             ^

References:
   code_frame_omit.js:9:13
    9│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:10:21
   10│   [x, y] as [empty, empty];
                           ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:16:4

Cannot cast array literal to tuple type because in index `0`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:16:4
   16│   [x, y] as [empty, empty];
          ^

References:
   code_frame_omit.js:7:13
    7│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:16:14
   16│   [x, y] as [empty, empty];
                    ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:16:7

Cannot cast array literal to tuple type because in index `1`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:16:7
   16│   [x, y] as [empty, empty];
             ^

References:
   code_frame_omit.js:9:13
    9│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:16:21
   16│   [x, y] as [empty, empty];
                           ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:17:4

Cannot cast array literal to tuple type because in index `0`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:17:4
   17│   [x, y] as [empty, empty];
          ^

References:
   code_frame_omit.js:7:13
    7│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:17:14
   17│   [x, y] as [empty, empty];
                    ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:17:7

Cannot cast array literal to tuple type because in index `1`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:17:7
   17│   [x, y] as [empty, empty];
             ^

References:
   code_frame_omit.js:9:13
    9│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:17:21
   17│   [x, y] as [empty, empty];
                           ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:26:4

Cannot cast array literal to tuple type because in index `0`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:26:4
   26│   [x, y] as [empty, empty];
          ^

References:
   code_frame_omit.js:21:13
   21│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:26:14
   26│   [x, y] as [empty, empty];
                    ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:26:7

Cannot cast array literal to tuple type because in index `1`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:26:7
   26│   [x, y] as [empty, empty];
             ^

References:
   code_frame_omit.js:25:13
   25│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:26:21
   26│   [x, y] as [empty, empty];
                           ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:32:4

Cannot cast array literal to tuple type because in index `0`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:32:4
   32│   [x, y] as [empty, empty];
          ^

References:
   code_frame_omit.js:21:13
   21│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:32:14
   32│   [x, y] as [empty, empty];
                    ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:32:7

Cannot cast array literal to tuple type because in index `1`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:32:7
   32│   [x, y] as [empty, empty];
             ^

References:
   code_frame_omit.js:25:13
   25│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:32:21
   32│   [x, y] as [empty, empty];
                           ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:33:4

Cannot cast array literal to tuple type because in index `0`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:33:4
   33│   [x, y] as [empty, empty];
          ^

References:
   code_frame_omit.js:21:13
   21│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:33:14
   33│   [x, y] as [empty, empty];
                    ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:33:7

Cannot cast array literal to tuple type because in index `1`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:33:7
   33│   [x, y] as [empty, empty];
             ^

References:
   code_frame_omit.js:25:13
   25│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:33:21
   33│   [x, y] as [empty, empty];
                           ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:43:4

Cannot cast array literal to tuple type because in index `0`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:43:4
   43│   [x, y] as [empty, empty];
          ^

References:
   code_frame_omit.js:37:13
   37│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:43:14
   43│   [x, y] as [empty, empty];
                    ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:43:7

Cannot cast array literal to tuple type because in index `1`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:43:7
   43│   [x, y] as [empty, empty];
             ^

References:
   code_frame_omit.js:42:13
   42│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:43:21
   43│   [x, y] as [empty, empty];
                           ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:49:4

Cannot cast array literal to tuple type because in index `0`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:49:4
   49│   [x, y] as [empty, empty];
          ^

References:
   code_frame_omit.js:37:13
   37│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:49:14
   49│   [x, y] as [empty, empty];
                    ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:49:7

Cannot cast array literal to tuple type because in index `1`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:49:7
   49│   [x, y] as [empty, empty];
             ^

References:
   code_frame_omit.js:42:13
   42│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:49:21
   49│   [x, y] as [empty, empty];
                           ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:50:4

Cannot cast array literal to tuple type because in index `0`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:50:4
   50│   [x, y] as [empty, empty];
          ^

References:
   code_frame_omit.js:37:13
   37│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:50:14
   50│   [x, y] as [empty, empty];
                    ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:50:7

Cannot cast array literal to tuple type because in index `1`: number [1] is incompatible with empty [2].
[incompatible-type]

   code_frame_omit.js:50:7
   50│   [x, y] as [empty, empty];
             ^

References:
   code_frame_omit.js:42:13
   42│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:50:21
   50│   [x, y] as [empty, empty];
                           ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ group.js:7:6

Cannot cast object literal to object type because in property `a`: number [1] is incompatible with string [2].
[incompatible-type]

   group.js:7:6
    7│   a: 1,
            ^ [1]

References:
   group.js:11:6
   11│   a: string,
            ^^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ group.js:8:6

Cannot cast object literal to object type because in property `b`: number [1] is incompatible with string [2].
[incompatible-type]

   group.js:8:6
    8│   b: 2,
            ^ [1]

References:
   group.js:12:6
   12│   b: string,
            ^^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ group.js:9:6

Cannot cast object literal to object type because in property `c`: number [1] is incompatible with string [2].
[incompatible-type]

   group.js:9:6
    9│   c: 3,
            ^ [1]

References:
   group.js:13:6
   13│   c: string,
            ^^^^^^ [2]



Found 26 errors
